--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Practice with newly sdd config</title>
 </head>
 <body>
+    <div class="row">
+        <div class="col-md-8"></div>
+        <div class="col-md-2"></div>
+    </div>
     
 </body>
 </html>
