--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <div class="row">
-        <div class="col-md-8"></div>
+        <div class="col-md-8">
+            <h1>VS SET up Now</h1>
+
+        </div>
         <div class="col-md-2"></div>
     </div>
     
